--- a/Exercícios das aulas/Aula 13/Tabuada_funcao/Tabuada_funcao.cbp
+++ b/Exercícios das aulas/Aula 13/Tabuada_funcao/Tabuada_funcao.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="selection-short" />
+		<Option title="Tabuada_funcao" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/selection-short" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/Tabuada_funcao" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -16,7 +16,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/selection-short" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/Tabuada_funcao" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
